# http-static-server

./: Cargo.toml  README.md
src/: content.rs  error.rs  http_method.rs  http_request.rs  main.rs  method.rs  request.rs  status.rs
src/response/: content.rs  headers.rs  mod.rs
