[package]
name = "http-static-server"
version = "0.1.0"
authors = ["ltoddy <tao.liu1@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.4"
async-std = "1.1.0"
log = "0.4.8"
simple_logger = "1.3.0"
